--- a/openshift/pipeline/Jenkinsfile
+++ b/openshift/pipeline/Jenkinsfile
@@ -1,6 +1,6 @@
 node('nodejs') {
   stage 'build'
-  openshiftBuild(buildConfig: 'nodejs-ex', showBuildLogs: 'true')
+  openshiftBuild(buildConfig: 'bubble-chat-backend', showBuildLogs: 'true')
   stage 'deploy'
-  openshiftDeploy(deploymentConfig: 'nodejs-ex')
+  openshiftDeploy(deploymentConfig: 'bubble-chat-backend')
 }
