--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
   "homepage": "https://github.com/PhysRex/bubble-chat-backend#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.16.3",
-    "expressjs": "^1.0.1",
-    "redis": "^2.8.0",
-    "socket.io": "^2.1.0",
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
     "ejs": "^2.4.1",
+    "express": "^4.16.3",
+    "expressjs": "^1.0.1",
+    "firebase": "^4.13.1",
     "mocha": "^2.4.5",
     "mongodb": "^2.1.16",
     "morgan": "^1.7.0",
-    "object-assign": "4.1.0"
+    "object-assign": "4.1.0",
+    "redis": "^2.8.0",
+    "socket.io": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
